new.css
/* ... */
/* DESKTOP VIEW */
@media only screen and (min-width: 1300px) {

    /* DESKTOP INDEX STARTS HERE */

    .indexMain {
        /* THIS IS THE GRID FOR THE INDEX PAGE */
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: minmax(100px, auto);
    }

    #indexTitle {
        font-size: 6rem;
        position: absolute;
        top: 35rem;
        left: 9rem;
    }

    #indexSubtitle {
        font-size: 1.6rem;
        position: absolute;
        top: 43rem;
        left: 38rem;
    }

    #scrollwrap {
        margin: 0 auto 1em auto;
    }

    .scrollbutton {
        width: 1.4em;
    }

    .article-box {
        text-align: left;
    }


    .article-box h1 {
        font-family: "La Belle Aurore", serif;
        font-size: 2.6rem;
        margin: 0;
    }

    .article-box .index-article {
        font-size: 1.4rem;
        line-height: 2rem;
        padding: 5% 2rem 5% 0;
    }

    hr {
        /* CREATES THE UNDERLINE FOR THE HEADERS */
        margin: 0;
    }

    .one {
        grid-column: 1;
        grid-row: 1;
        align-self: center;
        padding-left: 5%;
    }

    .two {
        grid-column: 2;
        grid-row: 1;
    }

    .three {
        grid-column: 1;
        grid-row: 2;
    }

    .four {
        grid-column: 2;
        grid-row: 2;
        align-self: center;
        padding-left: 5%;
    }

    .five {
        grid-column: 1 / 3;
        grid-row: 3;
        text-align: center;
        background-color: #F5F7F2;
    }

    .five .quote {
        font-size: 3rem;
    }

    .six {
        grid-column: 1;
        grid-row: 4;
        align-self: center;
        padding-left: 5%;
    }

    .seven {
        grid-column: 2;
        grid-row: 4;
    }

    .placeholder {
        /* IMAGES ON THE INDEX PAGE */
        max-width: 100%;
        object-fit: contain;
    }

    /* DESKTOP INDEX ENDS HERE */

    /* DESKTOP WINE PAGE BEGINS HERE*/

    #winetitle {
        font-size: 4rem;
        position: absolute;
        top: 8.5rem;
        left: 38rem;
    }

    #winesubtitle {
        font-size: 1em;
        position: absolute;
        top: 8rem;
        left: 33rem;
    }

    .wineCountry {
        font-size: 3.6rem;
        width: 80%;
    }

    #winegrid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 1rem;
        grid-auto-rows: minmax(100px, auto);
        width: 85%;
        margin: 0px auto;
    }


    article {
        width: 80%;
        padding: 30px;
    }

    article .wineImage {
        width: 50%;
        margin: 0 auto 20px auto;
        display: block;
    }

    article .name {
        font-size: 1.4rem;
        font-weight: 400;
        margin-top: 5px;
    }

    .modalcontent {
        width: 40vw;
        height: 40vh;
        padding-left: 2em;
        max-width: 1000px;
    }

    .modalname {
        font-size: 1.4rem;
        font-weight: 400;
        margin-top: 1rem;
    }

    article .wineHouse {
        font-size: 1.1rem;
        font-weight: 100;
        margin-top: 4px;
    }


    .modalhouse {
        font-size: 1.1rem;
        font-weight: 100;
        margin-top: 4px;
    }

    article .area {
        font-size: 1.1rem;
        font-weight: 100;
        margin-top: 1px;
    }

    .modalarea {
        font-size: 1.1rem;
        font-weight: 100;
        margin-top: 1px;
    }

    .modaldescription {
        font-size: 1.0rem;
        width: 70%;
        line-height: 2em;
        margin-bottom: 3em;
    }

    article .rating {
        font-size: 2rem;
        margin: 40px 0 5px 0;
    }

    .modalrating {
        font-size: 2rem;
        margin: 40px 0 5px 0;
    }

    article .ratingImage {
        width: 30%;
    }

    .modalwineimg {
        height: 90%;
    }

    /* DESKTOP WINE PAGE ENDS HERE*/

    /* DESKTOP ABOUT ME PAGE STARTS HERE */

    .about-me-box {
        width: 50%;
        top: 15rem;
        left: 26rem
    }

    .about-me-box hr {
        margin: 0 auto;
    }

    .about-me-box h1 {
        font-size: 2.6rem;
        padding-top: 10px;
    }

    .about-me-box p {
        padding: 3% 10% 5% 10%;
        font-size: 1.3rem;
        line-height: 1.7rem;
    }

    /* DESKTOP ABOUT ME PAGE ENDS HERE */

    /* DESKTOP FOOTER STARTS HERE */

    footer {
        height: 7vh;
        text-align: right;
        padding: 30px 20px;
    }

    .footer_1p {
        font-size: 1.2rem;
    }

    .footer_2p {
        font-size: 1rem;
        margin-top: 18px;
    }

    /* DESKTOP FOOTER ENDS HERE */
}


@media only screen and (max-width: 600px) {
    nav {
        display: inline-block;
        position: absolute;
        top: 0rem;
        right: 0rem;
        background: rgba(173, 196, 204, 0.95);
        width: 100%;
        height: 100vh;
        transform: scale(1, 0);
        transform-origin: top;
        transition: transform 500ms ease-in-out;
        z-index: 1;
        overflow-y: auto;
        position: fixed;
    }

    nav ul {
        list-style: none;
        text-align: center;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    nav li {
        margin: 1.7rem 0;
    }

    nav a {
        font-family: "La Belle Aurore", serif;
        color: white;
        text-decoration: none;
        font-size: 2.7rem;
        opacity: 0;
        transition: opacity 150ms ease-in-out;
    }

    .nav-toggle:checked ~ nav {
        transform: scale(1, 1);
    }

    .nav-toggle:checked ~ nav a {
        opacity: 1;
        transition: opacity 250ms ease-in-out 400ms;
    }

}

.wineWrapper {
    background-color: transparent;
    border: none;
    text-decoration: none;
    padding: 1em;
    border-radius: 10px;
}

.wineWrapper:hover {
    background-color: #CCD5BF;
    transition: .5s ease;
    backface-visibility: hidden;
}

.wineWrapper:hover .opacity {
    opacity: 0.3;
    transition: .5s ease;
}
/* ... */

